apps/beszel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel-hub
spec:
  type: NodePort
  selector:
    app: beszel-hub
  ports:
    - port: 8090
      targetPort: 8090
      nodePort: 30003
