apps/beszel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel-hub
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-http-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: beszel.czubinski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beszel-hub
                port:
                  number: 8090
